# extracts

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml
src/extracts/: __init__.py  _fetchers.py  _version.py
src/extracts/data/: registry.txt
